# nTracer2-copy

./: .gitattributes  .gitignore  102324_fly_3_merge.json  Dockerfile  GUIDE.md  README.md  docker-compose.override.yml.bak  docker-compose.yml  docker_runner.sh  layer.json  nginx.conf  pyproject.toml  viewer_state.json  vis.py
.github/workflows/: docker.yml
backend/: main.py  server.py
backend/algorithm/astar/: AstarWrapper.pyx  tracing.py
backend/algorithm/legacy/: Astar.pxd  Astar.py  tracing.py
backend/cdn/: cdn_array.py  cdn_helper.py
backend/ntracer/: constants.py  ntracer_functions.py  ntracer_state.py  state_injector.py  versioning.py
backend/ntracer/helpers/: ngauge_helper.py  ntracer_state_helper.py
backend/ntracer/tracing/: deletion_functions.py  mean_shift.py  tracing_functions.py  update_functions.py
backend/ntracer/utils/: timing.py
backend/ntracer/visualization/: image.py  indicator.py
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.jsx  Context.jsx  Menu.jsx  PointTable.jsx  RenderMenu.jsx  SideMenu.jsx  SomaTable.jsx  TopMenu.jsx  TracingMenu.jsx  TransformMenu.jsx  TreePanel.jsx  cfg.jsx  import.txt  index.css
dataset-selector-gui/: main.py
dataset_selector/: main.py
landing/: README.md  about.html  index.html  index.html.old  script.js  style.css
landing/img/: Spectral_Connectomics_Logo.ai
ng_injector_extension/: inject.js  manifest.json  styles.css
temp_out/app/: compile_cython.py  main.py  server.py
temp_out/etc/: ld.so.cache
(+55 files in other folders)
