[tool.poetry]
name = "ntracer_in_neuroglancer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.10"
neuroglancer = "^2.32"
nGauge = "^1.0.0"
Flask = "^2.1.3"
Flask-SocketIO = "^5.2.0"
Cython = "^0.29.30"
python-socketio = "^5.8.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sse-starlette = "^1.6.1"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
pyinstaller = "^5.12.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[tool.poetry.scripts]
cythonbuild = "my_module:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
